fixed header dropdown alignment

--- a/static/css/sass.css
+++ b/static/css/sass.css
@@ -1081,7 +1081,7 @@ input[type=range].MASAS-slider {
 .header .dropdown--wrapper {
   display: flex;
   align-items: center;
-  min-height: 3.5rem;
+  min-height: 4.2rem;
   position: relative;
   z-index: 2; }
   .header .dropdown--wrapper .username.login {
@@ -1105,7 +1105,7 @@ input[type=range].MASAS-slider {
     border: 1px solid black;
     color: white;
     z-index: 1;
-    top: 3.5rem;
+    top: 4.2rem;
     left: 0;
     min-width: 9rem;
     border-right: 0.5px solid rgba(255, 255, 255, 0.6);
