--- a/static/sass/Header/HeaderDropdown.sass
+++ b/static/sass/Header/HeaderDropdown.sass
@@ -4,7 +4,7 @@ $footerHeight: 3.5rem
 	.dropdown--wrapper
 		display: flex
 		align-items: center
-		min-height: $footerHeight
+		min-height: $desktop-header-height
 		position: relative
 		z-index: 2
 
@@ -34,7 +34,7 @@ $footerHeight: 3.5rem
 			border: 1px solid black
 			color: white
 			z-index: 1
-			top: $footerHeight
+			top: $desktop-header-height
 			left: 0
 			min-width: 9rem
 			border-right: 0.5px solid rgba(255,255,255,0.6)
